// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callZTERouter calls axios 1`] = `
{
  "baseUrl": "http://example-router/",
  "data": "action=login&Username=example-user&Password=example-password",
  "headers": {
    "Accept": "application/json, text/plain, */*",
    "Content-Type": "application/x-www-form-urlencoded",
    "Cookie": "_TESTCOOKIESUPPORT=1",
    "Host": "example-router",
    "Referer": "http://example-router/",
  },
  "method": "post",
  "url": "/",
}
`;

exports[`callZTERouter calls axios 2`] = `
{
  "baseUrl": "http://example-router/",
  "data": "action=exampel-action",
  "headers": {
    "Accept": "application/json, text/plain, */*",
    "Content-Type": "application/x-www-form-urlencoded",
    "Cookie": "_TESTCOOKIESUPPORT=1; SID=example-token",
    "Host": "example-router",
    "Referer": "http://example-router/",
  },
  "method": "post",
  "url": "/",
}
`;
